--- a/index.html
+++ b/index.html
@@ -228,10 +228,17 @@
       const fetchData = async () => {
         setLoading(true);
         try {
-          const response = await fetch('data.json');
+          const response = await fetch('https://api.the-finals-leaderboard.com/v1/leaderboard/s4/crossplay?limit=100');
           const data = await response.json();
-          setPlayers(data.players);
-          setLastUpdated(new Date(data.lastUpdated));
+          const players = data.data.map(p => ({
+            rank: p.rank,
+            name: p.name,
+            score: p.rankScore,
+            platform: p.steamName ? 'PC' : 'Console',
+            change: p.change
+          }));
+          setPlayers(players);
+          setLastUpdated(new Date());
         } catch (e) {
           console.error('Failed to load data:', e);
         }
