--- a/index.html
+++ b/index.html
@@ -228,7 +228,10 @@
       const fetchData = async () => {
         setLoading(true);
         try {
-          const response = await fetch('https://api.the-finals-leaderboard.com/v1/leaderboard/s4/crossplay?limit=100');
+          // Use CORS proxy since GitHub Pages can't call API directly
+          const proxyUrl = 'https://api.allorigins.win/raw?url=';
+          const apiUrl = 'https://api.the-finals-leaderboard.com/v1/leaderboard/s4/crossplay?limit=100';
+          const response = await fetch(proxyUrl + encodeURIComponent(apiUrl));
           const data = await response.json();
           const players = data.data.map(p => ({
             rank: p.rank,
